# fuzzy_sit

./: .gitignore  README.md  bag_images_to_video.py  bag_to_video.py  build.gradle  kb.owl  script_bash_for_bagfiles  settings.gradle
Matlab_development_for_thesis/: Extract_data_from_dataset.m  README.txt  check_marker.m  new_test1.2.xlsx  test1.2.xlsx
fuzzySit_torello_developing/: CMakeLists.txt  build.gradle  package.xml
fuzzy_sit_memory_pkgs/fuzzy_sit_memory_msgs/: CMakeLists.txt  package.xml
fuzzy_sit_memory_pkgs/fuzzy_sit_memory_msgs/msg/: FuzzyDegree.msg  Relations.msg  Scene.msg  SceneItem.msg  SceneRelations.msg  TestMessageReq.msg  TestMessageRes.msg
fuzzy_sit_memory_pkgs/fuzzy_sit_memory_msgs/srv/: TestServiceDirective.srv
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/: build.gradle
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/: FuzzySITBase.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/memoryLike/: MemoryInterface.java  SimpleMemory.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/monteCarlo/: CarloInterface.java  GuidedCarlo.java  SceneParticle.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/perception/: FeaturedSpatialObject.java  PerceptionBase.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/perception/simple2D/: BED_MINUS_X.java  BED_MINUS_Y.java  BED_X.java  BED_Y.java  BED__X.java  BedLeg.java  CHAIR_MINUS_X.java  CHAIR_MINUS_Y.java  CHAIR_X.java  CHAIR_Y.java  ChairLeg.java  ConnectObjectScene.java  DefineRelationsOnScene.java  Leg.java  NOT_MINUS_X.java  NOT_MINUS_Y.java  NOT_X.java  NOT_Y.java  NearObjectScene.java  NotLeg.java  Object.java  Pin.java  Pin_1.java  Pin_10.java  Pin_11.java  Pin_12.java  Pin_2.java  Pin_3.java  Pin_4.java  Pin_5.java  Pin_6.java  Pin_7.java  Pin_8.java  Pin_9.java  Point2.java  ROOF_MINUS_X.java  ROOF_MINUS_Y.java  ROOF_X.java  ROOF_Y.java  Region.java  (+4 more)
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/semantic/: PlacedObject.java  SITABox.java  SITTBox.java  SigmaCounters.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/semantic/axioms/: SpatialAtom.java  SpatialObject.java  SpatialProperty.java  SpatialRelation.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/java/it/emarolab/fuzzySIT/semantic/hierarchy/: SceneHierarchyEdge.java  SceneHierarchyVertex.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/main/resources/: table_assembling_data_set_memory_example.fuzzydl  table_classification_memory_example.fuzzydl
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/test/java/it/emarolab/fuzzySIT/gui/: Main.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/test/java/it/emarolab/fuzzySIT/memoryLike/: MemoryTest.java
fuzzy_sit_memory_pkgs/fuzzy_sit_pkg/fuzzySIT/src/test/java/it/emarolab/fuzzySIT/semantic/: FuzzydlTest.java  SceneHierarchyTest.java
fuzzy_sit_memory_pkgs/memory_pkg/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/: build.gradle
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/Logfiles/: ConsolidatingTime_MemoryItems.csv  ConsolidatingTime_MemoryItems_Function_One.csv  EncodingTime_MemoryItems.csv  ForgettingTime_MemoryItems.csv  ItemsForgotten_ConsolidatingFunction_One.csv  RetrievingTime_MemoryItems.csv  Score_ItemsForgotten_ConsolidatingFunction_One.csv  StoringTime_MemoryItems.csv
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/files/: GraphInformation.txt
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/src/: Bridge_node.cpp
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/src/main/java/it/emarolab/: ARMORMainService.java  Memory.java  MemoryImplementation.java  MemoryImplementationVersionUpdated.java  MemoryService.java
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/src/main/java/it/emarolab/armor/: ARMORCommandExecutive.java  ARMORCommandUtility.java  ARMORCommandsManipulation.java  ARMORCommandsQuery.java  ARMORCommandsUtils.java  ARMORMainService.java  ARMORResourceManager.java
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/src/main/resources/: table_assembling_data_set_memory_example.fuzzydl
fuzzy_sit_memory_pkgs/memory_pkg/memory_service/src/test/java/it/emarolab/: MemoryImplementationTest.java
fuzzysit_main_service/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
fuzzysit_msgs/: CMakeLists.txt  package.xml
fuzzysit_others_packages/: CMakeLists.txt  package.xml
gradle/wrapper/: gradle-wrapper.properties
launch/: create_bag_from_raw_data_to_elaborated_data.launch
libs/: SIT_abox.fuzzydl  SIT_kb.fuzzydl  SpatialFuzzy.txt  SpatialFuzzyTest.owl.fuzzydl.txt  kb.owl  kb2.owl  testSigmaCount.fuzzydl  testSigmaCount.owl  umbertoMailExample.fuzzydl
node/: CMakeLists.txt  package.xml
node/src/: bridge_node.cpp
vision/: CMakeLists.txt  package.xml
vision/msg/: Configuration.msg  Configuration_SIT.msg  SceneTable.msg  SceneToSIT.msg
vision/src/: LegElaboration.h  filter_node.cpp  legs_node.cpp  ypr.txt
vision/vision/: CMakeLists.txt  package.xml
(+362 files in other folders)
