<?xml version="1.0"?>
<package>
  <name>fuzzy_sit_memory_msgs</name>
  <version>1.0.0</version>
  <description>The fuzzy_sit_memory_msgs package</description>

  
  <maintainer email="fabio.torello@virgilio.it">Fabio Torello</maintainer>
  <author email="fabio.torello@virgilio.it">Fabio Torello</author>
  <url type="website">https://github.com/EmaroLab</url> 
  
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
