<?xml version="1.0"?>
<package>
    <name>memory_pkg</name>
    <version>0.1.0</version>
    <description>ROS service with memory functions</description>

    <maintainer email="fabio.torello@virgilio.it">Fabio Torello</maintainer>
    <author email="fabio.torello@virgilio.it">Fabio Torello</author>
    <url type="website">https://github.com/EmaroLab</url>
    <license>GPLv2</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>fuzzy_sit_memory_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>rosjava_build_tools</build_depend>
    <build_depend>fuzzy_sit_pkg</build_depend>
    <run_depend>fuzzy_sit_memory_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
   



    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>

